--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <!-- map -->
-<div id="map" class="map">
+<div id="map" class="map" style='width: 100%; height: 300px;'>
 <script type="text/javascript">
     // Setup Map
 var map = new maplibregl.Map({
@@ -47,6 +47,11 @@ map.addControl(new maplibregl.ScaleControl({
     
     
 </script>
+<!-- map -->
+</div>
+<p>About</p>
+<div>
+  
 </div>
 
 </body>
