--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@ map.addSource('inspire', {
 	'maxzoom': 16
 });
 
+map.addSource('landowners', {
+	'type': 'vector',
+	'tiles': [
+	'https://www.wisemover.co.uk/tiles/landowners/{z}/{x}/{y}.pbf'
+	],
+	'minzoom': 6,
+	'maxzoom': 16
+});
+
 map.addLayer({
     'id': 'inspire',
     'type': 'fill',
@@ -64,6 +73,53 @@ map.addLayer({
       'fill-color': 'rgba(188,128,189, 0.3)'
     }
 });
+
+map.addLayer({
+            'id': 'landowners',
+            'type': 'circle',
+            'source': 'landowners',
+            'source-layer': 'landowners',
+            'paint': {
+              // make circles larger as the user zooms from z12 to z22
+              'circle-radius': {
+                'base': 2.5,
+                'stops': [
+                  [8, 3],
+                  [22, 180]
+                ]
+              },
+              // color circles by ethnicity, using a match expression
+              // https://docs.mapbox.com/mapbox-gl-js/style-spec/#expressions-match
+              'circle-stroke-width': 1,
+              "circle-color": [
+          			'match',
+          			['get', 'Category'],
+          			'Co-operative Society (Company)','#a6cee3',
+                'Co-operative Society (Corporate Body)','#1f78b4',
+                'Community Benefit Society (Company)','#fdbf6f',
+                'Community Benefit Society (Corporate Body)','#ff7f00',
+                'Housing Association Co-operative Society (Company)','#e5f5f9',
+                'Housing Association Co-operative Society (Corporate Body)','#ccece6',
+                'Housing Association Community Benefit Society (Company)','#99d8c9',
+                'Housing Association Community Benefit Society (Corporate Body)','#66c2a4',
+                'Housing Association Registered Society (Company)','#41ae76',
+                'Housing Association Registered Society (Corporate Body)','#238b45',
+                'Housing Association/Society (Company)','#238b45',
+                'Housing Association/Society (Corporate Body)','#00441b',
+                'Industrial and Provident Society (Company)','#fb9a99',
+                'Industrial and Provident Society (Corporate Body)','#e31a1c',
+                'Local Authority','#cab2d6',
+                'County Council','#6a3d9a',
+                'Registered Society (Company)','#ffed6f',
+                'Registered Society (Corporate Body)','#ffffb3',
+                'Unlimited Company','#d7b5d8',
+                'Corporate Body','#df65b0',
+                'Limited Company or Public Limited Company','#dd1c77',
+                'Limited Liability Partnership','#980043',
+          			/* other */ '#e0e0e0'
+          			]
+            }
+        });
 
 });
 
@@ -84,3 +140,7 @@ map.addLayer({
 
 </body>
 </html>
+
+
+
+
