--- a/index.html
+++ b/index.html
@@ -123,6 +123,43 @@ map.addLayer({
 
 });
 
+// Click on Transit transitstops
+map.on('click', 'landowners', function (e) {
+var coordinates = e.features[0].geometry.coordinates.slice();
+var Title = e.features[0].properties.Title;
+var Tenure = e.features[0].properties.Tenure;
+var Property_Address = e.features[0].properties.Property_Address;
+var Company_No = e.features[0].properties.Company_No;
+var Category = e.features[0].properties.Category;
+var geocoded_address = e.features[0].properties.geocoded_address;
+var geocode_type = e.features[0].properties.geocode_type;
+
+
+
+var description = '<p><b>' + Title + '</b></p>' +
+'<p> Tenure: ' + Tenure + '</p>' +
+'<p> Property Address: ' + Property_Address + '</p>' +
+'<p> Company No: ' + Company_No + '</p>' +
+'<p> Category: ' + Category + '</p>' +
+'<p> Geocoded address: ' + geocoded_address + '</p>' +
+'<p> Geocode type: ' + geocode_type + '</p>';
+ 
+new mapboxgl.Popup()
+.setLngLat(coordinates)
+.setHTML(description)
+.addTo(map);
+});
+ 
+// Change the cursor to a pointer when the mouse is over the places layer.
+map.on('mouseenter', 'landowners', function () {
+map.getCanvas().style.cursor = 'pointer';
+});
+ 
+// Change it back to a pointer when it leaves.
+map.on('mouseleave', 'landowners', function () {
+map.getCanvas().style.cursor = '';
+});
+
 </script>
 <!-- map -->
 </div>
