Add more copyright

--- a/index.html
+++ b/index.html
@@ -234,10 +234,12 @@ function toggleLayer(layerName){
 The map shows two types of data:
 
 <h2>Inspire Polygons</h2>
-<p>The Inspire polygons show the boundaries of freehold land registered with the Land Registry. Not all land ownership is registered with the Land Registry, so the map has some gaps. Also, due to the size of the dataset, we can't map all the polygons when zoomed out. To see the full dataset, zoom in.</p>
+<p>The Inspire polygons show the boundaries of freehold land registered with the Land Registry. Not all land ownership is registered with the Land Registry, so the map has some gaps. Also, due to the size of the dataset, we can't map all the polygons when zoomed out. When zoomed out you will only see polygons greater than 100 acres, at medium zooms only polygons greater than 10 acres. To see the full dataset, zoom in. </p>
 
 <h2>Ownership Points</h2>
-<p>The Land Registry does not publish data on who owns every piece of land in England and Wales, but they do publish data on some types of organisations. Specifically UK and overseas companies that own land. This map shows the point locations of these properties. Click on a point for more information:</p>
+<p>The Land Registry does not publish data on who owns every piece of land in England and Wales, but they do publish data on some types of organisations. Specifically UK and overseas companies that own land. This map shows the point locations of these properties. The geocoding is a work in progress and more data will be added soon.</p> 
+
+<p>Click on a point for more information:</p>
 
 <p>
  <table>
@@ -283,8 +285,11 @@ The map shows two types of data:
 
 <h2>Copyright Notice</h2>
 <p>This information is subject to Crown copyright and database rights 2022 and is reproduced with the <a href="https://use-land-property-data.service.gov.uk/datasets/inspire#conditions">permission of HM Land Registry</a>.</p>
-
 <p>The polygons (including the associated geometry, namely x, y co-ordinates) are subject to Crown copyright and database rights 2022 Ordnance Survey 100026316.</p>
+<p>Contains OS data © Crown copyright and database right 2022</p>
+<p>Contains Royal Mail data © Royal Mail copyright and Database right 2022</p>
+<p>Contains National Statistics data © Crown copyright and database right 2022</p>
+
 <div>
   
 </div>
