fix bug with inspire popup

--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@ var INSPIREID = e.features[0].properties.INSPIREID;
 var local_authority = e.features[0].properties.local_authority;
 var area = e.features[0].properties.area;
 
-var description = '<p> Title No: ' + Title + '</p>' +
-'<p> INSPIRE ID: ' + INSPIREID + '</p>' +
+var description = '<p> INSPIRE ID: ' + INSPIREID + '</p>' +
 '<p> Local Authority: ' + local_authority + '</p>' +
 '<p> Area: ' + area + '</p>';
  
