--- a/index.html
+++ b/index.html
@@ -15,6 +15,38 @@ table, th, td {
   border: 1px solid black;
   border-collapse: collapse;
 }
+.welcome {
+  position: fixed;
+  top: 2%;
+  max-width: 800px;
+  width: 90%;
+  height: 530px;
+  max-height: 90%;
+  background-color: white;
+  border: solid 1px #444;
+  border-radius: 10px;
+  z-index: 1003;
+  padding: 10px;
+  overflow: auto; 
+  margin-left: 5px;
+  margin-right: 5px;
+}
+p.welcome-end {
+    font-size: 0.9em;
+    font-weight: normal;
+}
+.closewelcome {
+  color: black;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+.closewelcome:hover,
+.closewelcome:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
 </style>
 
 </head>
@@ -25,6 +57,26 @@ table, th, td {
   <p><label><input type="checkbox" id="inspirecheckbox" value="true" onclick="toggleLayer('inspire')" checked>Inspire Polygons</label></p>
   <p><label><input type="checkbox" id="landownerscheckbox" value="true" onclick="toggleLayer('landowners')" checked>Owner Points</label></p>
 </div>
+
+<!-- splash -->
+<div id="welcome" class="welcome">
+<span class="closewelcome">&times;</span>
+<iframe width="100%" height="100%" src="https://forms.office.com/Pages/ResponsePage.aspx?id=qO3qvR3IzkWGPlIypTW3ywVZfmO0bwdAhK0UztpneQtUMVRIR1JDS1EyUkJOQkJNTlE4WTY3MkxVWS4u&embed=true" frameborder="0" marginwidth="0" marginheight="0" style="border: none; max-width:100%; max-height:100vh" allowfullscreen webkitallowfullscreen mozallowfullscreen msallowfullscreen> </iframe>  
+</div>
+
+<script>
+// Get the welcome
+var welcome = document.getElementById("welcome");
+
+// Get the <span> element that closes the welcome
+var span = document.getElementsByClassName("closewelcome")[0];
+
+// When the user clicks on <span> (x), close the welcome
+span.onclick = function() {
+  welcome.style.display = "none";
+};
+</script>
+
 
 <!-- map -->
 <div id="map" class="map" style='width: 100%; height: 600px;'>
