--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="Description" content="Land ownership in England and Wales">
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-SFVXHLPJ8H"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-SFVXHLPJ8H');
+</script>
+
 <!-- Set Up Mapbox -->
 <script src='https://unpkg.com/maplibre-gl@2.1.9/dist/maplibre-gl.js'></script>
 <link href='https://unpkg.com/maplibre-gl@2.1.9/dist/maplibre-gl.css' rel='stylesheet' />
