Add cookies notice

--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@ The map shows two types of data:
 <p>Contains Royal Mail data © Royal Mail copyright and Database right 2022</p>
 <p>Contains National Statistics data © Crown copyright and database right 2022</p>
 
+<h2>Cookies Notice</h2>
+<p>We use Google analytics and Microsoft Forms as part of the requirment to log useage of Land Registry data. These services may set third party cookies.</p>
+
 <div>
   
 </div>
