Add terms of use

--- a/index.html
+++ b/index.html
@@ -345,7 +345,10 @@ The map shows two types of data:
 </p>
 
 <h2>Why do you ask for my name?</h2>
-<p>The <a href="https://use-land-property-data.service.gov.uk/datasets/ccod/licence/view">licence</a> for the data published by the Land Registry requires that we "maintain End-User Records ... for the purpose of auditing compliance with the terms of this Licence and/or for the prevention and/or detection of crime". Therfore we ask for your name and record the time you visited the site. We won't share this data with anybody unless the Land Registry requires us to as part of an audit. </p>
+<p>The <a href="https://use-land-property-data.service.gov.uk/datasets/ccod/licence/view">licence</a> for the data published by the Land Registry requires that we "maintain End-User Records ... for the purpose of auditing compliance with the terms of this Licence and/or for the prevention and/or detection of crime". Therefore we ask for your name and record the time you visited the site. We won't share this data with anybody unless the Land Registry requires us to as part of an audit. </p>
+
+<h2>Terms of use</h2>
+<p>This website is for personal, non-commercial use. The information is illustrative and may contain errors or missing data. You must not attempt to scrape or bulk download the data. You cannot embed or reproduce the maps or data without written consent.</p>
 
 <h2>Copyright Notice</h2>
 <p>This information is subject to Crown copyright and database rights 2022 and is reproduced with the <a href="https://use-land-property-data.service.gov.uk/datasets/inspire#conditions">permission of HM Land Registry</a>.</p>
@@ -355,7 +358,7 @@ The map shows two types of data:
 <p>Contains National Statistics data © Crown copyright and database right 2022</p>
 
 <h2>Cookies Notice</h2>
-<p>We use Google analytics and Microsoft Forms as part of the requirment to log useage of Land Registry data. These services may set third party cookies.</p>
+<p>We use Google Analytics and Microsoft Forms as part of the requirement to log the usage of Land Registry data. These services may set third-party cookies.</p>
 
 <div>
   
@@ -363,7 +366,3 @@ The map shows two types of data:
 
 </body>
 </html>
-
-
-
-
